# target-nats

./: .pre-commit-config.yaml  ASYNC_IMPROVEMENTS.md  LICENSE  README.md  docker-compose.yaml  meltano.yml  pyproject.toml
target_nats/: __init__.py  __main__.py  sinks.py  target.py
tests/: __init__.py  test_core.py
