[project]
name = "target-nats"
version = "0.0.1"
description = "Singer target for nats, built with the Meltano Singer SDK."
authors = [{ name = "Jonathan Steele", email = "jonathan.steele@xfactor.io" }]
requires-python = ">=3.10"
readme = "README.md"
license = "Apache-2.0"
keywords = [
    "ELT",
    "nats",
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "boto3>=1.40.71",
    "singer-sdk>=0.52.2",
    "nats-py>=2.11.0",
    "ddtrace>=3.17.0",
    "requests>=2.32.5",
]

[project.scripts]
target-nats = "target_nats.target:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.21.0",
    "singer-sdk[testing]>=0.40.0",
]

[tool.pytest.ini_options]
addopts = '--durations=10'
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.14"
warn_unused_configs = true

[tool.ruff]
src = ["target_nats"]
target-version = "py38"

[tool.ruff.lint]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
    "COM812",  # missing-trailing-comma
    "ISC001",  # single-line-implicit-string-concatenation
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.isort]
known-first-party = ["target_nats"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.black]
line-length = 79
include = '\.pyi?$' # All Python files
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
